--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,7 @@ body {
 
 .wallet-detail-table{
   margin:20px;
+  width: 400px;
 }
 
 .wallet-detail-table tr{
@@ -44,6 +45,6 @@ body {
   text-align: right;
 }
 
-.currency-container{
+.w-500{
   width:500px;
 }
