--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ body {
 
 .wallet-detail-table{
   margin:20px;
-  width: 400px;
+  min-width: 400px;
 }
 
 .wallet-detail-table tr{
@@ -46,5 +46,5 @@ body {
 }
 
 .w-500{
-  width:500px;
+  min-width:500px;
 }
